# apitestkit

./: .gitignore  ARCHITECTURE_DESIGN.md  INSTALLATION.md  MANIFEST.in  README.md  RELEASE_NOTES.md  USER_GUIDE.md  apitestkit1.2.rar  pyproject.toml  pytest.ini  requirements.txt  setup.py
apitestkit/: __init__.py
apitestkit/adapter/: __init__.py  api_adapter.py  api_decorators.py
apitestkit/assertion/: __init__.py  assertions.py
apitestkit/core/: __init__.py  config.py  data_storage.py  exceptions.py  logger.py
apitestkit/docs/: performance_testing_guide.md
apitestkit/exception/: __init__.py  exceptions.py
apitestkit/extractor/: __init__.py  data_extractor.py
apitestkit/performance/: __init__.py  load_generator.py  metrics_collector.py  performance_runner.py  report_generator.py
apitestkit/report/: __init__.py  charts_generator.py  report_generator.py
apitestkit/request/: __init__.py  http_client.py
apitestkit/request/auth/: __init__.py  auth_manager.py
apitestkit/response/: __init__.py  handler.py  response.py
apitestkit/test/: __init__.py  factory.py  test_case.py  test_runner.py  test_suite.py
apitestkit/validator/: response_validator.py
docs/: advanced_features.md  api_reference.md  configuration_guide.md  installation_guide.md  quick_start.md  user_guide.md
examples/: performance_test_example.py
scripts/: debug_test.py  environment_test.py
templates/: import_export_example.py  test_case_template.py
test_cases/: batch_test_cases.json  product_management_test.json  user_management_test.json
tests/: test_api_adapter.py  test_api_decorators.py  test_assertions.py  test_config.py  test_load_generator_error_handling.py  test_logger.py  test_performance_features.py
