# pyproject.toml
# 现代Python包构建系统配置

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "apitestkit"
version = "1.0.0"
description = "一个轻量级、高性能的API自动化测试框架"
readme = "README.md"
requires-python = ">=3.7,<4.0"
license = { file = "LICENSE" }
authors = [
    { name = "Hackercd", email = "Hackercd@foxmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Testers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "api", "testing", "automation", "rest", "http", 
    "test-framework", "api-testing", "automated-testing", 
    "qa", "quality-assurance"
]
dependencies = [
    "requests>=2.25.0",
    "rich>=10.0.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "jsonschema>=3.2.0",
    "wheel>=0.36.0",
    "twine>=3.4.0",
    "flake8>=3.9.0",
]
schema = [
    "jsonschema>=3.2.0",
]

[project.urls]
Documentation = "https://apitestkit.readthedocs.io"
Source = "https://github.com/Hackercd/apitestkit"
Tracker = "https://github.com/Hackercd/apitestkit/issues"

# [project.entry-points.console_scripts]
# apitestkit = "apitestkit.cli:main"  # 暂未实现

# 类型提示配置
[tool.setuptools.package-data]
apitestkit = ["py.typed"]

# 测试配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "smoke: 冒烟测试",
    "integration: 集成测试",
    "performance: 性能测试",
]

# 代码风格配置
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]